[package]
name = "kelvin"
version = "0.1.0"
edition = "2024"
description = "A thermodynamic-metaphor CLI task management tool"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "3"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3.1.1"
toml = "0.8"

[dev-dependencies]
tempfile = "3.25.0"
